[package]
name = "encrypto_sha256"
version = "0.1.0"
edition = "2021"
authors = ["Sandip sandip@ssdd.dev"]
description = "stunning-encrypto is cross platform end-to-end encryption dependency. And this is Sha256 extension of the same"
homepage = "https://www.ssdd.dev/zot/crypto/sha256"
repository = "https://github.com/zotcrypto/encrypto_sha256_rust"
readme = "README.md"
keywords = ["sha256", "end-to-end-encrypton", "stunning-encrypto", "encryption", "rust-e2ee"]
categories = ["cryptography"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
hex = "0.4.3"